--- a/trunk2/Web-Based-Inventory-System/public/css/main.css
+++ b/trunk2/Web-Based-Inventory-System/public/css/main.css
@@ -36,3 +36,27 @@ div:hover#hover_link{
 .center-text{
     text-align: center;
 }
+
+.socs-welcome{
+    background-color: transparent; 
+    padding-bottom: 245px;
+    padding-left: 75px;
+    text-shadow: inherit;
+}
+
+.carousel-caption h1,
+.carousel-caption .lead {
+    margin: 0;
+    line-height: 1.25;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,.4);
+}
+
+.carousel-caption .btn {
+    margin-top: 10px;
+}
+
+.carousel-images, .carousel-size{
+    width: 1200px; 
+    height:500px;
+}
