--- a/trunk2/Web-Based-Inventory-System/public/css/main.css
+++ b/trunk2/Web-Based-Inventory-System/public/css/main.css
@@ -1,5 +1,3 @@
-
-
 /* ==========================================================================
    SOCS's custom styles
    ========================================================================== */
@@ -16,9 +14,11 @@ div:hover#hover_link{
     cursor: pointer;
 }
 
+/*
 #navbar{
     opacity: 0.9;
 }
+*/
 
 .socs-content{
     background-color: white;
@@ -26,7 +26,7 @@ div:hover#hover_link{
     /*border: dotted 1px;*/
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 20px;
     /*border-radius: 10px;*/
     opacity: 0.9;
@@ -39,24 +39,19 @@ div:hover#hover_link{
 
 .socs-welcome{
     background-color: transparent; 
-    padding-bottom: 245px;
+    /*padding-bottom: 145px;*/
     padding-left: 75px;
     text-shadow: inherit;
 }
 
-.carousel-caption h1,
-.carousel-caption .lead {
-    margin: 0;
-    line-height: 1.25;
-    color: #fff;
-    text-shadow: 0 1px 1px rgba(0,0,0,.4);
+ul.nav #dropdown-hover:hover ul.dropdown-menu{
+    display: block;
 }
 
-.carousel-caption .btn {
-    margin-top: 10px;
+.navbar .navbar-inner .select2-container{
+    padding-top: 5px;
 }
 
-.carousel-images, .carousel-size{
-    width: 1200px; 
-    height:500px;
+.form-inline .select2-container{
+    padding-bottom: 10px;
 }
